Lägg till outputFormat = xml för fitnesse-headless