@@ -4,17 +4,11 @@ ext {
     phantomJsVersion = '1.1.0'
 }
 
-buildscript {
-    dependencies {
-        classpath 'org.akhikhl.gretty:gretty:1.2.0'
-        classpath 'se.inera.intyg:gradle-fitnesse-plugin:1.0-SNAPSHOT'
-    }
-}
+buildscript { dependencies { classpath 'se.inera.intyg:gradle-fitnesse-plugin:1.0-SNAPSHOT' } }
 
 description = 'Inera Privatläkarportal Fitnesse specifications'
 
 apply plugin: 'groovy'
-
 apply plugin: 'inera-fitnesse'
 
 fitnesse {
@@ -25,37 +19,11 @@ fitnesse {
         baseUrl: baseUrl
     ]
     wikiStartPage = "PrivatlakarPortal.WebTests"
-}
 
-if (project.hasProperty('runFitnesse')) {
-    apply plugin: 'org.akhikhl.gretty'
-    gretty {
-        contextPath = '/'
-        logbackConfigFile = "${projectDir}/src/main/resources/logback.xml"
-        jvmArgs = [
-            '-Dspring.profiles.active=dev',
-            '-Dprivatlakarportal.config.file=' + projectDir + '/src/main/resources/dev.properties',
-            '-Dprivatlakarportal.mailresource.file=' + projectDir + '/src/main/resources/dev.mailresource.properties',
-            '-Dcredentials.file=' + projectDir + '/src/main/resources/dev-credentials.properties',
-            '-Dprivatlakarportal.resources.folder=/' +projectDir + '/src/main/resources',
-            '-XX:MaxPermSize=256M'
-        ]
+    if (project.hasProperty('fileOutput')) {
+        outputFormat = "xml"
     }
-
-    farm {
-        webapp ":privatlakarportal-web"
-        webapp project
-        integrationTestTask = 'fitnesseTest'
-    }
-
-    dependencies {
-        gretty "com.h2database:h2:1.3.171"
-        gretty "mysql:mysql-connector-java:5.1.29"
-        gretty "org.apache.activemq:activemq-broker:5.8.0"
-        gretty "org.apache.tomcat:tomcat-catalina:7.0.20"
-     }
 }
-
 
 dependencies {
     compile project(":privatlakarportal-web")
